[project]
name="quisca"
version = "0.0.5"
description = "Score Aggregator for Quizizz"
dependencies = ["pandas","openpyxl","tabulate"]
keywords = ["Quizizz", "quiz", "joinmyquiz","aggregator"]
requires-python = ">=3.8"
authors = [
  {name = "Ashvin V", email = "acedeveloper003@gmail.com" }
]

[project.scripts]
quisca = "quisca:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"