[project]
name="quisca"
version = "0.0.5"
description = "Score Aggregator for Quizizz"
readme = "README.md"
license = {text = "MIT License"}
dependencies = ["pandas","openpyxl","tabulate"]
keywords = ["Quizizz", "quiz", "joinmyquiz","aggregator"]
requires-python = ">=3.8"
authors = [ {name = "Ashvin V", email = "acedeveloper003@gmail.com" } ]
classifiers = [
  Development Status :: 3 - Alpha,
  Environment :: Console,
  Intended Audience :: Education,
  Intended Audience :: End Users/Desktop,
  License :: OSI Approved :: MIT License,
  Programming Language :: Python :: 3.8
]

[project.scripts]
quisca = "quisca:main"

[project.urls]  # Optional

"Homepage" = "https://github.com/acedev003/quisca"
"Bug Reports" = "https://github.com/acedev003/quisca/issues"
"Source" = "https://github.com/acedev003/quisca/"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"